Добавление поддержки openspec
