# src/webapi/cnt_sp_webapi/3 UseCases/SP.WebApi.UseCases/Handlers/Example/Commands/UpdateExample/UpdateExampleCommand.cs
@@ -1,0 +1,9 @@
+using Requestum.Contract;
+using SP.WebApi.UseCases.Handlers.Example.Commands.UpdateExample.Responses;
+
+namespace SP.WebApi.UseCases.Handlers.Example.Commands.UpdateExample;
+
+/// <summary>
+/// Команда обновления примера сущности.
+/// </summary>
+public sealed record UpdateExampleCommand(Guid Id, string Name) : ICommand<UpdateExampleResponse>;
