# src/webapi/cnt_sp_webapi/3 UseCases/SP.WebApi.UseCases/Handlers/Example/Commands/UpdateExample/Validators/UpdateExampleCommandValidator.cs
@@ -1,0 +1,19 @@
+using FluentValidation;
+
+namespace SP.WebApi.UseCases.Handlers.Example.Commands.UpdateExample.Validators;
+
+/// <summary>
+/// Валидация <see cref="UpdateExampleCommand"/>.
+/// </summary>
+public sealed class UpdateExampleCommandValidator : AbstractValidator<UpdateExampleCommand>
+{
+    public UpdateExampleCommandValidator()
+    {
+        RuleFor(x => x.Id)
+            .NotEmpty();
+
+        RuleFor(x => x.Name)
+            .NotEmpty()
+            .MaximumLength(256);
+    }
+}
